# transmog

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: audit.yml
.rustme/: config.ron  docs.md  glossary.ron  header.md
coverage/: coverage.json  index.html
coverage/crates/transmog-async/src/: index.html  lib.rs.html  reader.rs.html  writer.rs.html
coverage/crates/transmog-bincode/src/: index.html  lib.rs.html
coverage/crates/transmog-cbor/src/: index.html  lib.rs.html
coverage/crates/transmog-ciborium/src/: index.html  lib.rs.html
coverage/crates/transmog-json/src/: index.html  lib.rs.html
coverage/crates/transmog-pot/src/: index.html  lib.rs.html
coverage/crates/transmog-versions/src/: index.html  lib.rs.html
coverage/crates/transmog/src/: index.html  lib.rs.html  test_util.rs.html
coverage/examples/async/examples/: index.html  stream.rs.html
coverage/examples/versions/examples/: index.html  playground.rs.html  switching-serializers.rs.html  versioned-serde.rs.html
crates/: README.md
crates/transmog/: .crate-docs.md  Cargo.toml  crate-docs.md
crates/transmog-async/: CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/transmog-async/.rustme/: async-docs.md  config.ron  header.md
crates/transmog-async/src/: .crate-docs.md  lib.rs  reader.rs  writer.rs
crates/transmog-bincode/: .crate-docs.md  Cargo.toml  README.md
crates/transmog-bincode/.rustme/: bincode-docs.md  config.ron  header.md
crates/transmog-bincode/src/: .crate-docs.md  lib.rs
crates/transmog-cbor/: Cargo.toml  README.md
crates/transmog-cbor/.rustme/: cbor-docs.md  config.ron  header.md
crates/transmog-cbor/src/: .crate-docs.md  lib.rs
crates/transmog-ciborium/: Cargo.toml
crates/transmog-ciborium/src/: lib.rs
crates/transmog-json/: Cargo.toml  README.md
crates/transmog-json/.rustme/: config.ron  header.md  json-docs.md
crates/transmog-json/src/: .crate-docs.md  lib.rs
crates/transmog-pot/: CHANGELOG.md  Cargo.toml  README.md
crates/transmog-pot/.rustme/: config.ron  header.md  pot-docs.md
crates/transmog-pot/src/: .crate-docs.md  lib.rs
crates/transmog-versions/: Cargo.toml  README.md
crates/transmog-versions/.rustme/: config.ron  header.md  versions-docs.md
crates/transmog-versions/src/: lib.rs
crates/transmog/examples/: playground.rs  switching-serializers.rs  versioned-serde.rs
crates/transmog/src/: .crate-docs.md  lib.rs  test_util.rs
crates/transmog/src/format/: pot.rs
crates/transmog/src/stream/: mod.rs  reader.rs  writer.rs
examples/: playground.rs  stream.rs  switching-serializers.rs  versioned-serde.rs
examples/async/: Cargo.toml
examples/async/examples/: stream.rs
examples/versions/: Cargo.toml
examples/versions/examples/: playground.rs  switching-serializers.rs  versioned-serde.rs
main/: crates.js  help.html  search-index.js  settings.html  source-files.js
main/implementors/core/clone/: trait.Clone.js
main/implementors/core/convert/: trait.From.js
main/implementors/core/default/: trait.Default.js
main/implementors/core/error/: trait.Error.js
main/implementors/core/fmt/: trait.Debug.js  trait.Display.js
main/implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
main/implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
main/implementors/futures_core/stream/: trait.Stream.js
main/implementors/futures_sink/: trait.Sink.js
main/implementors/std/error/: trait.Error.js
main/implementors/transmog/: trait.BorrowedDeserializer.js  trait.Format.js  trait.OwnedDeserializer.js
main/implementors/transmog_versions/: trait.Versioned.js
main/src/transmog/: lib.rs.html  test_util.rs.html
main/src/transmog_async/: lib.rs.html  reader.rs.html  writer.rs.html
main/src/transmog_bincode/: lib.rs.html
main/src/transmog_cbor/: lib.rs.html
main/src/transmog_ciborium/: lib.rs.html
main/src/transmog_json/: lib.rs.html
main/src/transmog_pot/: lib.rs.html
main/src/transmog_versions/: lib.rs.html
main/src/xtask/: main.rs.html
main/transmog/: all.html  index.html  macro.define_format_test_suite!.html  macro.define_format_test_suite.html  sidebar-items.js  trait.BorrowedDeserializer.html  trait.Format.html  trait.OwnedDeserializer.html
main/transmog/test_util/: fn.test_format.html  index.html  sidebar-items.js
main/transmog_async/: all.html  index.html  sidebar-items.js  struct.AsyncDestination.html  struct.Builder.html  struct.SyncDestination.html  struct.TransmogReader.html  struct.TransmogStream.html  struct.TransmogWriter.html  type.TransmogTokioTcpReader.html  type.TransmogTokioTcpWriter.html
main/transmog_async/reader/: struct.TransmogReader.html
main/transmog_async/writer/: struct.AsyncDestination.html  struct.SyncDestination.html  struct.TransmogWriter.html
main/transmog_bincode/: all.html  index.html  sidebar-items.js  struct.Bincode.html
main/transmog_cbor/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Cbor.html
main/transmog_ciborium/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Ciborium.html
main/transmog_json/: all.html  enum.Error.html  index.html  sidebar-items.js  struct.Json.html
main/transmog_pot/: all.html  index.html  sidebar-items.js  struct.Pot.html
main/transmog_versions/: all.html  enum.Error.html  fn.decode.html  fn.unwrap_version.html  fn.wrap.html  fn.write_header.html  index.html  sidebar-items.js  struct.UnknownVersion.html  trait.ConstVersioned.html  trait.Versioned.html
main/xtask/: all.html  enum.Config.html  fn.main.html  index.html
src/: lib.rs
src/format/: bincode.rs  mod.rs  pot.rs
src/stream/: mod.rs  reader.rs  writer.rs
xtask/: Cargo.toml
xtask/src/: main.rs
