[package]
name = "transmog-async"
version = "0.1.0-dev.1"
edition = "2021"

[dependencies]
transmog = { path = "../transmog", version = "0.1.0-dev.1" }
futures-core = { version = "0.3" }
futures-sink = { version = "0.3" }
tokio = { version = "1.0", features = ["net"] }
bytes = { version = "1.0" }
ordered-varint = "0.1.0-dev.1"

[dev-dependencies]
thiserror = "1"
anyhow = "1"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
transmog-bincode = { path = "../transmog-bincode", version = "0.1.0-dev.1" }
transmog-pot = { path = "../transmog-pot", version = "0.1.0-dev.1" }
