[package]
name = "transmog-bincode"
version = "0.1.0"
edition = "2021"
description = "Bincode adaptor for Transmog"
repository = "https://github.com/khonsulabs/transmog"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "bincode"]
categories = ["encoding"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmog = { path = "../transmog", version = "0.1.0" }
serde = "1.0.136"
bincode = "1.3.3"

[dev-dependencies]
transmog = { path = "../transmog", version = "0.1.0", features = ["test-util"] }
