[package]
name = "transmog-cbor"
version = "0.1.0-dev.1"
edition = "2021"
description = "CBOR adaptor for Transmog"
repository = "https://github.com/khonsulabs/transmog"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "cbor"]
categories = ["encoding"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2"
transmog = { path = "../transmog", version = "0.1.0-dev.1" }
serde = "1"
thiserror = "1"

[dev-dependencies]
transmog = { path = "../transmog", version = "0.1.0-dev.1", features = [
    "test-util",
] }
