[package]
name = "transmog-json"
version = "0.1.0"
edition = "2021"
description = "Json adaptor for Transmog"
repository = "https://github.com/khonsulabs/transmog"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "json"]
categories = ["encoding"]
readme = "./README.md"

[dependencies]
serde_json = { version = "1" }
transmog = { path = "../transmog", version = "0.1.0" }
serde = "1"
thiserror = "1"

[dev-dependencies]
transmog = { path = "../transmog", version = "0.1.0", features = ["test-util"] }
