[package]
name = "transmog-pot"
version = "0.3.0"
edition = "2021"
description = "Pot adaptor for Transmog"
repository = "https://github.com/khonsulabs/transmog"
license = "MIT OR Apache-2.0"
keywords = ["serialization", "pot"]
categories = ["encoding"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pot = "3.0.0"
transmog = { path = "../transmog", version = "0.1.0" }
serde = "1.0.136"

[dev-dependencies]
transmog = { path = "../transmog", version = "0.1.0", features = ["test-util"] }
