[package]
name = "transmog-versions"
version = "0.1.0-dev.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmog = { path = "../transmog", version = "0.1.0-dev.1" }
ordered-varint = "0.1.0-dev.1"
thiserror = "1"
