[package]
name = "transmog-versions"
version = "0.1.0-dev.1"
edition = "2021"
description = "Multi-version/Multi-format support for Transmog"
repository = "https://github.com/khonsulabs/transmog"
license = "MIT OR Apache-2.0"
keywords = ["serialization"]
categories = ["encoding"]
readme = "./README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
transmog = { path = "../transmog", version = "0.1.0-dev.1" }
ordered-varint = "0.1.0-dev.1"
thiserror = "1"
