[package]
name = "versions-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
transmog = { path = "../../crates/transmog" }
transmog-versions = { path = "../../crates/transmog-versions" }
transmog-pot = { path = "../../crates/transmog-pot" }
transmog-bincode = { path = "../../crates/transmog-bincode" }

serde = { version = "1.0.136", features = ["derive"] }
thiserror = "1.0.30"
anyhow = "1.0.53"
